name:                pure-evo
version:             0.1.0.0
synopsis:            🧬 Exploring genetic algorithms in Haskell
description:         🧬 Exploring genetic algorithms in Haskell
homepage:            https://github.com/tomasff/pure-evo#readme
license:             BSD3
license-file:        LICENSE
author:              Tomás Fernandes
maintainer:          contact@tomff.com
copyright:           2021 Tomás Fernandes
category:            AI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable example
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5, pure-evo
  default-language:    Haskell2010
  hs-source-dirs:
    example

source-repository head
  type:     git
  location: https://github.com/tomasff/pure-evo
